// Copyright 2020 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bufbuild.buf.module.v1beta1;

import "validate/validate.proto";

option go_package = "github.com/bufbuild/buf/internal/gen/proto/go/v1/bufbuild/buf/module/v1beta1;modulev1beta1";

// ModuleFileSet is a the set of files for a module.
//
// Max total size: 32MB
message ModuleFileSet {
  // module_files are the .proto files that make up the module.
  //
  // Sorted by path.
  // Path must be unique.
  repeated ModuleFile module_files = 1 [
    (validate.rules).repeated.min_items = 1,
    (validate.rules).repeated.max_items = 16384
  ];
}

// ModuleFile is a .proto file within a module.
message ModuleFile {
  // path is the relative path of the file.
  // Path can only use '/' as the separator character, and includes no ".." components.
  // Path always ends in .proto.
  string path = 1 [
    (validate.rules).string.min_len = 1,
    (validate.rules).string.max_len = 2048
  ];
  // content is the content of the file.
  bytes content = 2 [
    (validate.rules).bytes.max_len = 1048576
  ];
}
