// Copyright 2020-2023 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.lsp.test.v1alpha1;

message Diagnostic {
  SourceLocation range = 1;
  string message = 3;
}

message SemanticToken {
  SourceLocation range = 1;
  string type = 2;
  repeated string modifiers = 3;
}

message SourceLocation {
  string path = 1;
  uint32 start_line = 2;
  uint32 start_col = 3;
  uint32 end_line = 4;
  uint32 end_col = 5;
}

message CodeInfo {
  SourceLocation range = 1;
  string hover = 2;
  SourceLocation ref_loc = 4;
}

message FileInfo {
  string path = 1;
  repeated Diagnostic diagnostics = 2;
  repeated SemanticToken semantic_tokens = 3;
  repeated CodeInfo code_info = 4;
}
